--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container" ng-app="VisitorCenter">
   <h1>Visitors</h1>
-
   <div ng-controller="visitorsController">
     <div class="well">
       <h3>Add a new Visitor</h3>
@@ -19,17 +18,20 @@
             <input type="text" ng-model="newVisitor.reason" class="form-control" placeholder="Reason for Visit" />
           </div>
         </div>
+        <div class="col-md-6">
+          <input type="file" nv-file-select uploader="uploader"/><br/>
+        </div>
         <div class="row">
           <div class="col-xs-12 text-center">
             <br />
-            <input type="Submit" value="Add Visitor" class="btn btn-primary" />
+            <input type="Submit" value="Add Visitor" class="btn btn-primary btn-block" />
           </div>
         </div>
       </form>
     </div>
 
     <h3>Currently Visiting</h3>
-    <hr />
+    <hr>
     <table class="table table-bordered table-striped">
       <thead>
         <tr>
@@ -47,7 +49,7 @@
           <td>{{ visitor.first_name }}</td>
           <td>{{ visitor.last_name }}</td>
           <td>{{ visitor.reason }}</td>
-          <td><a class="btn btn-danger" ng-click="deleteVisitor($index)">Remove</a></td>
+          <td><a class="btn btn-danger btn-block" ng-click="deleteVisitor($index)">Remove</a></td>
         </tr>
       </tbody>
     </table>
