carrierwave_direct and sidekiq

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   <meta name="author" content="">
   <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
   <link href="stylesheets/scrolling-nav.css" rel="stylesheet">
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/bootstrap.min.js"></script>
+  <script src="javascripts/jquery.easing.min.js"></script>
+  <script src="javascripts/scrolling-nav.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -17,9 +21,6 @@
 <body>
 <%= render "layouts/header" %>
 <%= yield %>
-  <script src="js/jquery.js"></script>
-  <script src="javascripts/bootstrap.min.js"></script>
-  <script src="javascripts/jquery.easing.min.js"></script>
-  <script src="javascripts/scrolling-nav.js"></script>
+
 </body>
 </html>
