--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @picture, :html => {:multipart => true} do |f| %>
   <%= f.hidden_field :key %>
 
+  <p>File: <%= @picture.image_name %></p>
+
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
