--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,4 +1,4 @@
-div class="picture">
+<div class="picture">
   <% if picture.image_processed? %>
     <%= link_to image_tag(picture.image_url(:thumb)), picture if picture.image? %>
   <% else %>
