--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,7 +1,4 @@
 <%= form_for @picture, :html => {:multipart => true} do |f| %>
-  <%= f.hidden_field :key %>
-
-  <p>File: <%= @picture.image_name %></p>
 
   <p>
     <%= f.label :title %><br />
@@ -15,7 +12,9 @@
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </p>
-
+  <p>
+    <%= f.file_field :image %>
+  </p>
   <p>
     <%= f.label :remote_image_url, "or image URL" %>
     <%= f.text_field :remote_image_url %>
