--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,10 +1,6 @@
-<h1 class="page-header" >Painting Gallery</h1>
-  <div id="paintings">
-     <%= render @pictures  %>
-  </div>
-  <div class="clear"></div>
-  <br>
-    <%= direct_upload_form_for @uploader do |f| %>
-      <p><%= f.file_field :image %></p>
-      <p><%= f.submit "Upload Image", class:"btn btn-default btn-lg" %></p>
-    <% end %>
+<h1 class="page-header" >Gallery</h1>
+
+<% @pictures.each do |picture| %>
+     <%= image_tag picture.image_url(:thumb).to_s %>
+     
+<% end %>
