--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">Galleries</a>
+                  <%= link_to "Galleries", pictures_path %>
                 </li>
                 <li>
                     <a class="page-scroll" href="#services">Services</a>
