--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="page-header" >Gallery</h1>
 
 <% @pictures.each do |picture| %>
-     <%= image_tag picture.image_url(:thumb).to_s %>
-     
+  <%= image_tag picture.image_url(:thumb).to_s %>
+  <%= link_to picture.title, picture %>
 <% end %>
