--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,4 @@
 <%= @picture.title %>
+<%= image_tag @picture.image_url(:show).to_s %>
 
 <h4><%= link_to "Edit", edit_picture_path %> || <%= link_to "Delete", picture_path, method: :delete %></h4>
