--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -10,7 +10,7 @@
   </p>
   <p>
     <%= f.label :description %><br />
-    <%= f.text_field :description %>
+    <%= f.text_area :description,  :size => "50%x7%"  %>
   </p>
   <p>
     <%= f.file_field :image %>
@@ -19,5 +19,5 @@
     <%= f.label :remote_image_url, "or image URL" %>
     <%= f.text_field :remote_image_url %>
   </p>
-  <p><%= f.submit %></p>
+  <%= f.button :submit, class:'btn btn-default btn-lg' %>
 <% end %>
