--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,9 @@
    list-style-type: none;
    margin-left: 15px;
  }
+
+ img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
