--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,16 @@
   <script src="javascripts/scrolling-nav.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
 <%= render "layouts/header" %>
 <div class="container">
-<%= yield %>
+  <%= yield %>
+
+
 </div>
+<hr>
+<%= render "layouts/footer" %>
 </body>
 </html>
