--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -19,5 +19,5 @@
     <%= f.label :remote_image_url, "or image URL" %>
     <%= f.text_field :remote_image_url %>
   </p>
-  <%= f.button :submit, class:'btn btn-default btn-lg' %>
+  <%= f.button :submit, class:'btn btn-default btn-lg btn-block' %>
 <% end %>
