--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,6 +1,6 @@
 
 <div class="col-lg-3"></div>
-<h3 class="page-header">New</h3>
+<h3 class="page-header">Update</h3>
 <div class="col-lg-5">
 <%= render "form" %>
 </div>
