--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,5 +1,7 @@
-<div class="col-lg-4"></div>
-<div class="col-lg-4">
+
+<div class="col-lg-3"></div>
+<h3 class="page-header">New Picture</h3>
+<div class="col-lg-5">
 <%= render "form" %>
 </div>
-<div class="col-md-4"></div>
+<div class="col-lg-4"></div>
