--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,9 +1,13 @@
-<h3 class="page-header"><%= @picture.title %></h3>
+<h3><%= @picture.title %></h3>
+<h5><%= link_to "Edit", edit_picture_path %> || <%= link_to "Delete", picture_path, method: :delete %> || <%= link_to 'Back', :back %></h5>
+
+<hr>
 <div class="col-lg-7">
 	<%= image_tag @picture.image_url(:show).to_s %>
 </div>
-<div class=col-lg-5">
-	<p>U$ <%= @picture.price %></p>
-	<p><%= @picture.description %></p>
 <br>
-<h4><%= link_to "Edit", edit_picture_path %> || <%= link_to "Delete", picture_path, method: :delete %></h4>
+<div class="col-lg-5">
+	<h4>U$ <%= @picture.price %></h4>
+	<p><%= @picture.description %></p>
+</div>
+<br>
