--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,23 +1,9 @@
-<%= form_for @picture, :html => {:multipart => true} do |f| %>
+<%= form_tag '/pictures', method: :post, class: "dropzone", id: "media-dropzone" do %>
+  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+  <div class="fallback">
+    <%= file_field_tag "media", multiple: true%>
+  </div>
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :price %><br />
-    <%= f.text_field :price %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description,  :size => "50%x7%"  %>
-  </p>
-  <p>
-    <%= f.file_field :image %>
-  </p>
-  <p>
-    <%= f.label :remote_image_url, "or image URL" %>
-    <%= f.text_field :remote_image_url %>
-  </p>
-  <%= f.button :submit, class:'btn btn-default btn-lg btn-block' %>
 <% end %>
+<br>
+<%= button_tag 'Upload file', class: 'btn btn-small btn-primary btn-remove-file', id: 'submit-all' %>
