assets load -- terminal ok, but console Failed to load resource: A server with the specified hostname could not be found.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-  <link href="stylesheets/scrolling-nav.css" rel="stylesheet">
-  <script src="javascripts/jquery.js"></script>
-  <script src="javascripts/bootstrap.min.js"></script>
-  <script src="javascripts/jquery.easing.min.js"></script>
-  <script src="javascripts/scrolling-nav.js"></script>
+  <script src="//javascripts/jquery.js"></script>
+  <script src="//javascripts/bootstrap.min.js"></script>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="//stylesheets/scrolling-nav.css">
+  <script src="//javascripts/jquery.easing.min.js"></script>
+  <script src="//javascripts/scrolling-nav.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
