--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,15 @@
 <center>
 	<footer>
-	  <p>developed by Seasalt Labs</p>
-	  <p>Contact information: <a href="mailto:someone@example.com">
-	  someone@example.com</a>.</p>
+		<div class="row">
+			<div class="col-sm-4">
+		  	<p class="text-center">developed by Seasalt Labs</p>
+			</div>
+			<div class="col-sm-4">
+		  	<p>Contact information: <a href="mailto:someone@example.com">
+		  someone@example.com</a>.</p>
+			</div>
+		</div class="col-sm-4"></div>
+		</div>
 	</footer>
 </center>
 <br>
