--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container" ng-app="VisitorCenter">
-  <h1>Visitors</h1>
+  <h1>Users</h1>
   <div ng-controller="visitorsController">
     <div class="well">
       <h3>Add a new Visitor</h3>
