--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,7 +1,14 @@
-
-<div class="col-lg-3"></div>
-<h3 class="page-header">New Picture</h3>
-<div class="col-lg-5">
-<%= render "form" %>
+<h1 class="page-header">New Picture</h1>
+<div class="row">
+	<div class="col-lg-6">
+		<%= render "form" %>
+	</div>
+	<div class="col-lg-4">
+		<h2 class="page-header">Guides</h2>
+		<ul>
+			<li>High Quality picture always preffered</li>
+			<li>Be clear in your description</li>
+			<li>But don't worry, you can always adjust later</li>
+		</ul>
+	</div>
 </div>
-<div class="col-lg-4"></div>
