--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -5,7 +5,7 @@
   <% @pictures.each do |picture| %>
     <div class="col-md-3">
     <ul>
-      <%= image_tag picture.image_url(:thumb).to_s %>
+      <%= link_to (image_tag picture.image_url(:thumb).to_s), picture %>
       <%= link_to picture.title, picture %>
     </ul>
   </div>
