--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,7 +1,11 @@
-
-<div class="col-lg-3"></div>
-<h3 class="page-header">Update</h3>
-<div class="col-lg-5">
-<%= render "form" %>
+<h1 class="page-header">Update</h1>
+<div class="row">
+	<div class="col-lg-6">
+		<%= render "form" %>
+	</div>
+	<div class="col-lg-6">
+		<h3 class="page-header">More guides . . .</h3>
+		<ul>
+			<li>"keep it simple", most of the time is the best way to go</li>
+	</div>
 </div>
-<div class="col-lg-4"></div>
