--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                     <a class="page-scroll" href="#services">Sign In</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Mail</a>
+                    <%= link_to "Posts", posts_path %>
                 </li>
             </ul>
         </div>
