--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div class="row">
+  <div class="col-md-4">
+    <% @posts.each do |post| %>
+      <%= post.title %>
+    <% end %>
+  </div>
+</div>
