show action and show page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<div class="row">
+	<div class="col-md-6">
+		<h2 class="page-header"><%= @post.title %></h2>
+		<%= @post.description %>
+	</div>
+</div>
