--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4">
     <% @posts.each do |post| %>
-      <%= post.title %>
+      <%= link_to post.title, post %>
     <% end %>
   </div>
 </div>
