--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
 	<div class="col-md-6">
-		<h2 class="page-header"><%= @post.title %></h2>
+		<h2><%= @post.title %></h2>
+		<%= link_to "Edit", edit_post_path %> | | <%= link_to "Delete", post_path, method: :delete %> | | <%= link_to "Back", :back %>
+		<hr>
 		<%= @post.description %>
+
 	</div>
 </div>
