set up association post and picture

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,14 @@
+<h2 class="page-header text-center">New Post</h2>
 <div class="row">
 	<div class="col-md-6">
 		<%= render "form" %>
+	</div>
+	<div class="col-lg-6">
+		<h2 class="page-header">Guides</h2>
+		<ul>
+			<li>High Quality picture always preffered</li>
+			<li>Be clear in your description</li>
+			<li>But don't worry, you can always adjust later</li>
+		</ul>
 	</div>
 </div>
