--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
+<h1 class="text-center">Posts</h1>
+<%= link_to "New", new_post_path %>
+<hr>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <% @posts.each do |post| %>
-      <%= link_to post.title, post %>
+      <h4><%= link_to post.title, post %></h4>
     <% end %>
   </div>
 </div>
 <br>
-<%= link_to "New", new_post_path %>
