omniauth, devise, and user

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,8 +6,8 @@
 	<div class="col-lg-6">
 		<h2 class="page-header">Guides</h2>
 		<ul>
-			<li>High Quality picture always preffered</li>
-			<li>Be clear in your description</li>
+			<li>Be as descriptive as possible</h1>
+			<li>High Quality pictures always preffered</li>
 			<li>But don't worry, you can always adjust later</li>
 		</ul>
 	</div>
