--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,4 +6,28 @@
 		<%= @post.description %>
 
 	</div>
+	<div class="col-md-6">
+		<%= form_for [@post, @picture], :html => {:multipart => true} do |f| %>
+
+		  <p>
+		    <%= f.label :title %><br />
+		    <%= f.text_field :title %>
+		  </p>
+		  <p>
+		    <%= f.label :price %><br />
+		    <%= f.text_field :price %>
+		  </p>
+		  <p>
+		    <%= f.label :description %><br />
+		    <%= f.text_area :description, :cols => "40", :rows => "5" %>
+		  </p>
+
+		 <p>
+		   <%= f.file_field :image %>
+		 </p>
+
+		 <br>
+		  <p><%= f.button :submit, class:"btn btn-default btn-lg" %></p>
+		<% end %>
+	</div>
 </div>
