--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,19 +1,15 @@
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <h5><%= link_to "Sign in with Google", omniauth_authorize_path(resource_name, provider) %><br /></h5>
-  <% end -%>
-<% end -%><br />
+
 
 <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
 <% end -%>
-
+<br>
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <h5><%= link_to "Sign up", new_registration_path(resource_name) %></h5><br />
+  <button class="btn btn-default btn-md"><%= link_to "Sign up", new_registration_path(resource_name) %></button><br />
 <% end -%>
-
+<br>
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <h5><%= link_to "Forgot your password?", new_password_path(resource_name) %></h5><br />
+  <button class="btn btn-default btn-md"><%= link_to "Forgot your password?", new_password_path(resource_name) %></button><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
