--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -3,12 +3,10 @@
 
   <div class="form-inputs">
     <%= f.input :address, label: false, placeholder: "street and/or city" %>
-    <%= f.input :state, label: false, placeholder: "state" %>
-     <%= f.input :zipcode, label: false, placeholder: "zipcode" %>
 
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, class:"btn btn-info btn-block" %>
+    <%= f.button :submit, class:"btn btn-info btn-lg" %>
   </div>
 <% end %>
