--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,3 +66,10 @@
    height: 384px;
    width: 100%;
  }
+
+  #map {
+    position:absolute;
+    top:250px;
+    bottom:40px;
+    width:100%;
+  }
