--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,15 @@
   <link rel="stylesheet" href="//stylesheets/scrolling-nav.css">
   <script src="//javascripts/jquery.easing.min.js"></script>
   <script src="//javascripts/scrolling-nav.js"></script>
-  <script src="http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.js"></script>
-  <link href="http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css" rel="stylesheet" />
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src='https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js'></script>
+  <link href='https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css' rel='stylesheet' />
 </head>
 <body>
 <%= render "layouts/header" %>
-<div class="container">
+<div class="container-fluid">
   <%= yield %>
 
 </div>
