--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,13 +1,25 @@
-<div class="col-md-6">
-	<h2>Location</h2>
-	<p>
-		<strong>Address:</strong>
-		<%= @location.address %>
-		<%= @location.latitude %>
-		<%= @location.longitude %>
-	</p>
-	<p>
-		<%= link_to "Edit", edit_location_path(@location) %> |
-		<%= link_to "Destroy", @location, :confirm => 'Are you sure?', :method => :delete %> |
-		<%= link_to "View All", locations_path %>
-	</p>
+<div class="row">
+	<div id='map' class="dark"></div>
+		<script>
+		L.mapbox.accessToken = 'pk.eyJ1IjoibWFydmluaWNrIiwiYSI6ImNpZms1OGNobjBnam9zM2txMW5hcjBwYW0ifQ.VN5CcMCxoB-zYF_8atJkzw';
+		var map = L.mapbox.map('map', 'mapbox.streets')
+				.setView([40, -74.50], 9);
+	</script>
+
+	<div class="col-md-6">
+		<h2>Location</h2>
+		<p>
+			<strong>Address:</strong>
+			<%= @location.address %>
+			<%= @location.latitude %>
+			<%= @location.longitude %>
+		</p>
+		<p>
+			<%= link_to "Edit", edit_location_path(@location) %> |
+			<%= link_to "Destroy", @location, :confirm => 'Are you sure?', :method => :delete %> |
+			<%= link_to "View All", locations_path %>
+		</p>
+	</div>
+
+
+</div>
