--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,8 +1,16 @@
-
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+<div class="row">
+  <div class="col-md-12">
+    <% @places.each do |place| %>
+      <div class="col-md-2">
+        <%= place.name %>
+        <%= place.state %>
+      </div>
+    <% end %>
+    <h5><%= link_to "New", new_place_path %></h5>
+  </div>
 </div>
 
+<div id="map"></div>
 <script type="text/javascript">
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
