--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
                       <%= link_to "Posts", posts_path %>
                   </li>
                   <li>
-                    <%= link_to "Places", locations_path %>
+                    <%= link_to "Places", places_path %>
                   </li>
                   <li>
                     <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
