--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1>MapBox</h1>
+<h1>Map</h1>
   <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/marvinick.cifk58bbe0ggdsikqiz7qiwt5/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1IjoibWFydmluaWNrIiwiYSI6ImNpZms1OGNobjBnam9zM2txMW5hcjBwYW0ifQ.VN5CcMCxoB-zYF_8atJkzw'></iframe>
 </div>
 
