--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -13,7 +13,13 @@
 <div id="map"></div>
 <script type="text/javascript">
   handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  handler.buildMap({
+    provider: {
+      zoom: 100
+    },
+    internal: {id: 'map'}
+    },
+    function(){
     markers = handler.addMarkers(<%=raw @hash.to_json %>);
     handler.bounds.extendWith(markers);
     handler.fitMapToBounds();
