front page starts

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,6 +1,7 @@
-
-<h1>Map</h1>
-  <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/marvinick.cifk58bbe0ggdsikqiz7qiwt5/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1IjoibWFydmluaWNrIiwiYSI6ImNpZms1OGNobjBnam9zM2txMW5hcjBwYW0ifQ.VN5CcMCxoB-zYF_8atJkzw'></iframe>
+<div class="row">
+  <div class="jumbotron">
+    <h1>Place to be</h1>
+  </div>
 </div>
 
 
