--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,11 +18,21 @@
  @import "bootstrap";
 
  body {
-  padding-top: 100px;
+  padding-top: 90px;
+}
+
+.jumbotron {
+  color: inherit;
+  text-align: center;
+  height: 400px;
+  background: image-url('iron-man.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
 .container {
-    font-family: "Courier New", Times, serif;
+  font-family: "Courier New", Times, serif;
  }
 
  nav li {
@@ -39,7 +49,6 @@
 
 .navbar-inverse {
     background-color: white;
-    border-color: #F4F4F4;
     z-index: 1000;
     overflow: hidden;
     opacity: 0.9;
@@ -47,10 +56,9 @@
 
 .navbar-default {
     background-color: black;
-    border-color: #F4F4F4;
     z-index: 1000;
     overflow: hidden;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 #map-container {
