--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,6 +1,36 @@
 <div class="row">
   <div class="jumbotron">
-    <h1>Place to be</h1>
+    <h2>Place to be</h2>
+  </div>
+<hr>
+  <div class="col-md-6">
+    <div class="box">
+      <h3>This is it</3>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="box">
+      <h3>This is it</h3>
+    </div>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-4">
+    <div class="box2">
+      <h4>Boom</h4>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="box2">
+      <h4>Boom</h4>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="box2">
+      <h4>Boom</h4>
+    </div>
   </div>
 </div>
 
