front page polish

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,8 +1,12 @@
 <div class="row">
   <div class="jumbotron">
-    <h2>Place to be</h2>
+    <strong><h1>grown.in house.</h1></strong>
+    <form>
+      <input type="text" name="firstname" placeholder="type plant" size="35">
+      <br>
+    </form>
   </div>
-<hr>
+<br>
   <div class="col-md-6">
     <div class="box">
       <h3>This is it</3>
