--- a/app/assets/stylesheets/visitors.css.scss
+++ b/app/assets/stylesheets/visitors.css.scss
@@ -10,14 +10,16 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  font-family: "Courier New", Times, serif;
 }
 
-.jumbotron h2 {
+.jumbotron h1 {
   color: white;
 }
 
 .box {
   background-color: white;
+  background: image-url('garden.jpg');
   width: auto;
   height: 300px;
   padding: 10px;
@@ -32,6 +34,7 @@
 
 .box2 {
   background-color: white;
+  background: image-url('iron-man.jpg');
   width: auto;
   height: 200px;
   padding: 10px;
