--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,17 @@
 <center>
 	<footer>
 		<div class="row">
-			<div class="col-sm-4">
-		  	<p class="text-center">developed by Seasalt Labs</p>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2">
+		  	<p class="text-center">2015 @Seasalt Labs</p>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2">
 		  	<p>Contact information: <a href="mailto:someone@example.com">
 		  someone@example.com</a>.</p>
 			</div>
-		</div class="col-sm-4"></div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"></div>
 		</div>
 	</footer>
 </center>
