--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -44,3 +44,23 @@
     </div>
   </div>
 </div>
+<br>
+<hr>
+<center>
+	<footer>
+		<div class="row">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2">
+		  	<p class="text-center">2015 @Seasalt Labs</p>
+			</div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2">
+		  	<p>Contact information: <a href="mailto:someone@example.com">
+		  someone@example.com</a>.</p>
+			</div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"></div>
+		</div>
+	</footer>
+</center>
+<br>
