--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,9 +18,8 @@
  @import "bootstrap";
 
  body {
-  padding-top: 90px;
+  padding-top: 50px;
 }
-
 
 .jumbotron h1 {
   color: white;
@@ -37,7 +36,7 @@ nav li {
 }
 
 .nav.navbar-nav li a {
-    color: black;
+  color: black;
 }
 
 img {
@@ -60,25 +59,23 @@ img {
   opacity: 0.9;
 }
 
-#map-container {
-   height: 400px;
-   border-radius: 16px 16px;
-   border-color: #fff;
-   border-style: solid;
-   box-shadow: 2px 2px 10px #B1B1B1;
-   margin-top: 25px;
-   border-width: 7px;
- }
- #map-canvas {
-   height: 384px;
-   width: 100%;
- }
-
 #map {
   position:absolute;
   top:250px;
   bottom:40px;
   width:98%;
+}
+
+.place {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.post {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
 }
 
 .form-login {
