--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,6 +1,7 @@
-<h1 class="page-header">New Picture</h1>
+<h1 class="page-header text-center">New Picture</h1>
 <div class="row">
 	<div class="col-lg-6">
+		<br>
 		<%= render "form" %>
 	</div>
 	<div class="col-lg-4">
