--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,27 +1,29 @@
-<div class="row">
-  <div class="col-md-12">
-    <% @places.each do |place| %>
-      <div class="col-md-2">
-        <%= place.name %>
-        <%= place.state %>
-      </div>
-    <% end %>
-    <h5><%= link_to "New", new_place_path %></h5>
+<div class="place">
+  <div class="row">
+    <div class="col-md-12">
+      <% @places.each do |place| %>
+        <div class="col-md-2">
+          <%= place.name %>
+          <%= place.state %>
+        </div>
+      <% end %>
+
+    </div>
+    <h5 class="text-center"><%= link_to "New", new_place_path %></h5>
   </div>
 </div>
-
-<div id="map"></div>
-<script type="text/javascript">
-  handler = Gmaps.build('Google');
-  handler.buildMap({
-    provider: {
-      zoom: 100
-    },
-    internal: {id: 'map'}
-    },
-    function(){
-    markers = handler.addMarkers(<%=raw @hash.to_json %>);
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
-</script>
+  <div id="map"></div>
+  <script type="text/javascript">
+    handler = Gmaps.build('Google');
+    handler.buildMap({
+      provider: {
+        zoom: 100
+      },
+      internal: {id: 'map'}
+      },
+      function(){
+      markers = handler.addMarkers(<%=raw @hash.to_json %>);
+      handler.bounds.extendWith(markers);
+      handler.fitMapToBounds();
+    });
+  </script>
