--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,15 +1,10 @@
-<%= form_for @post, :html => {:multipart => true} do |f| %>
+<%= simple_form_for @post, :html => {:class => 'form-signin'} do |f| %>
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description, :cols => "40", :rows => "5" %>
-  </p>
-
- <br>
-  <p><%= f.button :submit, class:"btn btn-default btn-lg" %></p>
+  <%= f.error_notification %>
+  <%= f.input :title, label: false, placeholder: "title", input_html: {class: "form-control"} %>
+  <%= f.input :description, label: false, placeholder: "description", input_html: {class: "form-control", :rows => 5} %>
+  <%= f.button :submit, class:"btn btn-default btn-lg" %>
 <% end %>
+
+ 
+
