--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <strong><h1>grown.in house.</h1></strong>
     <form>
-      <input type="text" name="firstname" placeholder="type plant" size="35">
+      <input type="text" name="firstname" placeholder="enter location" size="35">
       <br>
     </form>
   </div>
@@ -10,57 +10,63 @@
   <div class="col-md-6">
     <h3 class="text-center">Location based</h3>
     <div class="box">
-      <h3>This is it</3>
+      <h3>This is it</h3>
     </div>
   </div>
 
   <div class="col-md-6">
-    <h3 class="text-center">Places</h3>
-    <div class="box">
+    <h3 class="text-center">DIY</h3>
+    <div class="box-right">
       <h3>This is it</h3>
-    </div>
+    </div> 
   </div>
 </div>
-<hr>
+<br> 
 <div class="row">
   <div class="col-md-4">
-    <h4 class="text-center">Places</h4>
-    <div class="box2">
+    <h4 class="text-center">Creative</h4>
+    <div class="box2-left">
       <h4>Boom</h4>
     </div>
   </div>
 
   <div class="col-md-4">
     <h4 class="text-center">Places</h4>
-    <div class="box2">
+    <div class="box2-center">
       <h4>Boom</h4>
     </div>
   </div>
 
   <div class="col-md-4">
     <h4 class="text-center">Places</h4>
-    <div class="box2">
+    <div class="box2-right">
       <h4>Boom</h4>
     </div>
   </div>
 </div>
+
 <br>
 <hr>
-<center>
-	<footer>
-		<div class="row">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-2">
-		  	<p class="text-center">2015 @Seasalt Labs</p>
-			</div>
-			<div class="col-sm-2"></div>
-			<div class="col-sm-2">
-		  	<p>Contact information: <a href="mailto:someone@example.com">
-		  someone@example.com</a>.</p>
-			</div>
-			<div class="col-sm-2"></div>
-			<div class="col-sm-2"></div>
+
+<footer>
+	<div class="row">
+		<div class="col-md-4">
+      <p class="text-center">Careers</p>
+      <p class="text-center">Terms</p>
 		</div>
-	</footer>
-</center>
+		<div class="col-md-4">
+      <p class="text-center">About</p>
+	  	<p class="text-center">Blog</p>
+		</div>
+    <div class="col-md-4">
+      <p class="text-center">FAQs</p>
+    </div>
+	</div>
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-md-12">
+      <p class="text-center">2015 @Seasalt Labs</p>
+</footer>
+
 <br>
