--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,72 +1,79 @@
 <div class="row">
   <div class="jumbotron">
-    <strong><h1>grown.in house.</h1></strong>
+    <strong><h1>stay busy garden</h1></strong>
     <form>
       <input type="text" name="firstname" placeholder="enter location" size="35">
       <br>
     </form>
   </div>
-<br>
+
+  <br>
   <div class="col-md-6">
-    <h3 class="text-center">Location based</h3>
+    
     <div class="box">
-      <h3>This is it</h3>
+     <h3 class="text-center">Locations</h3>
     </div>
   </div>
 
   <div class="col-md-6">
-    <h3 class="text-center">DIY</h3>
+    
     <div class="box-right">
-      <h3>This is it</h3>
+      <h3 class="text-center">Create Neighborhood Event</h3>
     </div> 
   </div>
 </div>
+
 <br> 
+
 <div class="row">
   <div class="col-md-4">
-    <h4 class="text-center">Creative</h4>
+    
     <div class="box2-left">
-      <h4>Boom</h4>
+      <h3 class="text-center">Creative</h3>
     </div>
   </div>
 
   <div class="col-md-4">
-    <h4 class="text-center">Places</h4>
+    
     <div class="box2-center">
-      <h4>Boom</h4>
+      <h3 class="text-center">Places</h3>
     </div>
   </div>
 
   <div class="col-md-4">
-    <h4 class="text-center">Places</h4>
+    
     <div class="box2-right">
-      <h4>Boom</h4>
+      <h3 class="text-center">Places</h3>
     </div>
   </div>
 </div>
 
+<br>  
 <br>
-<hr>
 
-<footer>
-	<div class="row">
-		<div class="col-md-4">
-      <p class="text-center">Careers</p>
-      <p class="text-center">Terms</p>
-		</div>
-		<div class="col-md-4">
-      <p class="text-center">About</p>
-	  	<p class="text-center">Blog</p>
-		</div>
-    <div class="col-md-4">
-      <p class="text-center">FAQs</p>
-    </div>
-	</div>
-  <br>
-  <br>
-  <div class="row">
-    <div class="col-md-12">
-      <p class="text-center">2015 @Seasalt Labs</p>
-</footer>
+
+  <div class="footer">
+  	<div class="row">
+      <br>
+      <br>
+  		<div class="col-md-4">
+        <p class="text-center">Careers</p>
+        <p class="text-center">Terms</p>
+  		</div>
+  		<div class="col-md-4">
+        <p class="text-center">About</p>
+  	  	<p class="text-center">Blog</p>
+  		</div>
+      <div class="col-md-4">
+        <p class="text-center">FAQs</p>
+      </div>
+  	</div>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="text-center">2015 @Seasalt Labs</p>
+  </div>
 
 <br>
+
