location as root path

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,10 @@ img {
   opacity: 0.9;
 }
 
+.navbar li {
+  font-family: "Courier New", Times, serif;
+}
+
 #map {
   position:absolute;
   top:250px;
