--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
             </button>
           <ul class="nav navbar-nav">
             <li>
-              <%= link_to "dibblers", root_path, class:"navbar-brand"%>
+              <strong><%= link_to "dribllers", root_path, class: "navbar-brand" %></strong>
             </li>
           </ul>
         </div>
