--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -14,6 +14,8 @@
   </div>
 
   <br>
+  <br>
+  <h2 class="text-center">Explore the neightborhood</h2>
   <div class="col-md-6">
     
     <div class="box">
@@ -22,34 +24,31 @@
   </div>
 
   <div class="col-md-6">
-    
     <div class="box-right">
-      <h3 class="text-center">Create Neighborhood Event</h3>
+      <h3 class="text-center">Events</h3>
     </div> 
   </div>
 </div>
 
 <br> 
-
+<br>
 <div class="row">
+  <h2 class="text-center">See your neighbors's yard </h2>
   <div class="col-md-4">
-    
     <div class="box2-left">
-      <h3 class="text-center">Creative</h3>
+      <h3 class="text-center">Edible</h3>
     </div>
   </div>
 
   <div class="col-md-4">
-    
     <div class="box2-center">
-      <h3 class="text-center">Places</h3>
+      <h3 class="text-center">Tools</h3>
     </div>
   </div>
 
   <div class="col-md-4">
-    
     <div class="box2-right">
-      <h3 class="text-center">Places</h3>
+      <h3 class="text-center">Spaces</h3>
     </div>
   </div>
 </div>
