pictures as user's post

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,10 +23,10 @@
                 </li>
                 <% if user_signed_in? %>
                   <li>
-                    <%= link_to "Galleries", pictures_path %>
+                    <%= link_to "Create", pictures_path %>
                   </li>
                   <li>
-                      <%= link_to "Posts", posts_path %>
+                      <%= link_to "Events", posts_path %>
                   </li>
                   <li>
                     <%= link_to "Places", places_path %>
