--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -19,13 +19,13 @@
   <div class="col-md-6">
     
     <div class="box">
-     <h3 class="text-center">Locations</h3>
+     <h3 class="text-center"><%= link_to "Places", places_path %></h3>
     </div>
   </div>
 
   <div class="col-md-6">
     <div class="box-right">
-      <h3 class="text-center">Events</h3>
+      <h3 class="text-center"><%= link_to "Events", posts_path %></h3>
     </div> 
   </div>
 </div>
@@ -33,7 +33,7 @@
 <br> 
 <br>
 <div class="row">
-  <h2 class="text-center">See your neighbors's yard </h2>
+  <h2 class="text-center">See your neighbors's yard</h2>
   <div class="col-md-4">
     <div class="box2-left">
       <h3 class="text-center">Edible</h3>
