--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -3,7 +3,9 @@
  <%= f.error_notification %>
  
   <%= f.input :title, label: false, placeholder: "title", input_html: {class: "form-control"} %>
+  <%= f.input :description, label: false, placeholder: "description", input_html: {class: "form-control", :rows => 5} %>
   <%= f.input :price, label: false, placeholder: "price", input_html: {class: "form-control"} %>
+
   <%= f.file_field :image %>
   <br>
   <%= f.button :submit, class:"btn btn-info btn-lg" %>
