--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,11 +1,18 @@
-<h1 class="page-header">Update</h1>
+<h3 class="page-header text-center">Update Listing</h3>
 <div class="row">
+	<div class="col-md-1"></div>
+	<div class="col-md-3">
+		
+		<h4 class="text-center">Guides</h4>
+		<ul>
+			<li>High Quality picture always preffered</li>
+			<li>Be clear in your description</li>
+			<li>But don't worry, you can always adjust later</li>
+		</ul>
+	</div>
 	<div class="col-lg-6">
+		<br>
 		<%= render "form" %>
 	</div>
-	<div class="col-lg-6">
-		<h3 class="page-header">More guides . . .</h3>
-		<ul>
-			<li>"keep it simple", most of the time is the best way to go</li>
-	</div>
+	<div class="col-md-2"></div>
 </div>
