--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,15 +1,18 @@
-<h1 class="page-header text-center">New Picture</h1>
+<h3 class="page-header text-center">Add Listing</h3>
 <div class="row">
-	<div class="col-lg-6">
-		<br>
-		<%= render "form" %>
-	</div>
-	<div class="col-lg-4">
-		<h2 class="page-header">Guides</h2>
+	<div class="col-md-1"></div>
+	<div class="col-md-3">
+		
+		<h4 class="text-center">Guides</h4>
 		<ul>
 			<li>High Quality picture always preffered</li>
 			<li>Be clear in your description</li>
 			<li>But don't worry, you can always adjust later</li>
 		</ul>
 	</div>
+	<div class="col-lg-6">
+		<br>
+		<%= render "form" %>
+	</div>
+	<div class="col-md-2"></div>
 </div>
