--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,13 +1,16 @@
-<h3><%= @picture.title %></h3>
-<h5><%= link_to "Edit", edit_picture_path %> || <%= link_to "Delete", picture_path, method: :delete %> || <%= link_to 'Back', :back %></h5>
+<div class="picture">
+	<h3><%= @picture.title %></h3>
+	<h5><%= link_to "Edit", edit_picture_path %> || <%= link_to "Delete", picture_path, method: :delete %> || <%= link_to 'Back', :back %></h5>
+	<hr>
+	<div class="row">
 
-<hr>
-<div class="col-lg-7">
-	<%= image_tag @picture.image_url(:show).to_s %>
+		<div class="col-md-7">
+			<%= image_tag @picture.image_url(:show).to_s %>
+		</div>
+		<div class="col-md-5">
+			<h4>U$ <%= @picture.price %></h4>
+			<p><%= @picture.description %></p>
+		</div>
+		<br>
+	</div>
 </div>
-<br>
-<div class="col-lg-5">
-	<h4>U$ <%= @picture.price %></h4>
-	<p><%= @picture.description %></p>
-</div>
-<br>
