--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -8,6 +8,7 @@
 			<%= image_tag @picture.image_url(:show).to_s %>
 		</div>
 		<div class="col-md-5">
+			<h5> by <%= @picture.user.email %></h5>
 			<h4>U$ <%= @picture.price %></h4>
 			<p><%= @picture.description %></p>
 		</div>
