--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -3,6 +3,7 @@
 		<div class="col-md-2">
 			<ul>
 				<h4 class="text-center"><%= link_to current_user.email, edit_user_registration_path %></h4>
+				<em><h6>(Click to edit)</h6></em>
 			</ul>
 		</div>
 		<div class="col-md-1"></div>
