--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.error_notification %>
   <%= f.input :title, label: false, placeholder: "title", input_html: {class: "form-control"} %>
   <%= f.input :description, label: false, placeholder: "description", input_html: {class: "form-control", :rows => 5} %>
-  <%= f.button :submit, class:"btn btn-default btn-lg" %>
+  <%= f.submit "Submit", class:"btn btn-default btn-lg" %>
 <% end %>
 
  
