--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -8,7 +8,7 @@
 
   <%= f.file_field :image %>
   <br>
-  <%= f.button :submit, class:"btn btn-info btn-lg" %>
+  <%= f.submit "Submit", class:"btn btn-info btn-lg" %>
 <% end %>
  
 
